--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -173,7 +173,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Alemán, E.; Saiegh, S. M. (2007). Legislative preferences, political parties, and coalition unity in Chile. <em>Comparative Politics</em>, 39(3), 253–272.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.jstor.org/stable/20434040" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Bravo Lira, B. (1986). <em>Régimen de gobierno y partidos políticos en Chile, 1924–1973</em>. Santiago: Jurídica.</span>
@@ -185,7 +185,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Fontaine, A.; Larroulet, C.; Navarrete, J.; Walker, I. (Eds.). (2009). <em>Reforma al sistema electoral chileno</em>. Santiago: PNUD; CEP; Libertad y Desarrollo; ProyectAmérica; Cieplan.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1sA2aQHfJ893jTifs_PaQX4uIsWc2f8zO/view?usp=drive_link" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Fuentes, C. (2013). <em>El fraude: Crónica sobre el plebiscito de la Constitución de 1980</em>. Santiago: Hueders.</span>
@@ -213,7 +213,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Nohlen, D. (2006). "La reforma del sistema binominal desde una perspectiva comparada." <em>Revista de Ciencia Política</em>, 26(1), 191–202.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0718-090X2006000100012" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Pastor, D. (2004). Origins of the Chilean binominal election system. <em>Revista de Ciencia Política</em>, 24(1), 38–57.</span>
@@ -221,7 +221,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Valenzuela, A. (1978). <em>The Breakdown of Democratic Regimes: Chile</em>. Baltimore, MD: Johns Hopkins University Press.</span>
-        <a class="tiny-link" href="https://ediciones.udp.cl/libro/el-quiebre-de-la-democracia-en-chile/" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1TZaVV3KKOSSrIKPAqKbupu6AVuKChB3g/view?usp=drive_link" target="_blank" rel="noopener noreferrer">PDF</a>
       </li>
       <li class="item-row">
         <span class="file-title">Valenzuela, J. S. (2005). ¿Hay que eliminar el sistema binominal? Una propuesta alternativa. <em>Política</em>, 45, 53–66.</span>
@@ -280,11 +280,11 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Brown, W. (2015). <em>Undoing the Demos: Neoliberalism’s Stealth Revolution</em>. New York: Zone Books.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://press.princeton.edu/books/paperback/9781935408543/undoing-the-demos" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Cox, C.; Lemaitre, M. J. (1999). Market and state principles of reform in Chilean education: policies and results. In G. Perry & D. M. Leipziger (Eds.), <em>Chile: Recent Policy Lessons and Emerging Challenges</em>. Washington, DC: World Bank Publications, 149–188.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/1nzlZrE_j59Nje8Zgu85Ja217Esg7Qr3j/view?usp=drive_link" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Edwards, S. (2024). <em>The Chile Project: The Story of the Chicago Boys and the Downfall of Neoliberalism</em>. Princeton, NJ: Princeton University Press.</span>
@@ -295,8 +295,8 @@
         <a class="tiny-link" href="https://link.springer.com/book/10.1057/9780230594180" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
-        <span class="file-title">Gayo, M.; Méndez, M. L. (2023). <em>The Politics of the Elite</em>. New York: Routledge.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <span class="file-title">Gayo, M.; Méndez, M. L. (2024). <em>The Politics of the Elite: Ideological Orientations, Mothering, and Social Mobilities in Neoliberal Chile</em>. New York: Routledge.</span>
+        <a class="tiny-link" href="https://www.routledge.com/The-Politics-of-the-Elite-Ideological-Orientations-Mothering-and-Social-Mobilities-in-Neoliberal-Chile/Gayo-Mendez/p/book/9781032560045" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Harvey, D. (2005). <em>A Brief History of Neoliberalism</em>. Oxford: Oxford University Press.</span>
@@ -332,7 +332,7 @@
       </li>
       <li class="item-row">
         <span class="file-title">Williamson, J. (1993). Democracy and the “Washington Consensus.” <em>World Development</em>, 21(8), 1329–1336.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.sciencedirect.com/science/article/abs/pii/0305750X9390046C" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
     </ul>
 
@@ -445,7 +445,7 @@
     <ul class="file-list">
       <li class="item-row">
         <span class="file-title">Allamand, A.; Cubillos, M. (2010). <em>La estrella y el arco iris: Cómo después de 20 años fue derrotada la Concertación</em>. Santiago: Aguilar.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.ecolectura.cl/Home/Details/7ec36282-4791-434e-89b8-1dbebe987336/la-estrella-y-el-arco-iris-como-despues-de--aos-fue-derrotada-la-concentracion?srsltid=AfmBOoqTwWH0f3Cb2lWVrpTr5aXmokkTCuY2tX7ZVKvatZDawiOrkipE" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Bunker, K. (2010). <em>The 2009 Presidential Election in Chile</em> (MA Thesis). San Diego, CA: San Diego State University.</span>
@@ -461,23 +461,23 @@
       </li>
       <li class="item-row">
         <span class="file-title">Ffrench-Davis, R. (2001). <em>Tres décadas de política económica</em>. Santiago: Dolmen Ediciones.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.amazon.it/Entre-neoliberalismo-crecimiento-equidad-econ%C3%B3mica/dp/9871105665" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Ffrench-Davis, R. (2002). Entre el neoliberalismo y el crecimiento con equidad. <em>Revista de Economía Política</em>, 22(4), 594–612.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.scielo.br/j/rep/a/H8RQPdNmgS5vJSWmC6Xxbct/?lang=es" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Ffrench-Davis, R. (2005). <em>Economic Reforms in Chile: From Dictatorship to Democracy</em> (4th ed.). Ann Arbor, MI: University of Michigan Press.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://press.umich.edu/Books/E/Economic-Reforms-in-Chile" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Heine, J. (2001). Modernización y malestar: la segunda fase de la transición chilena. <em>Perspectivas</em>, 4(2), 353–361.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.chilepatrimonios.gob.cl/index.php/ficha?doi=03BND-RC0045244" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Insulza, J. M. (1998). Los efectos de la crisis asiática y su impacto en la economía chilena. <em>Serie de Publicaciones Análisis Político Coyuntural</em>, Fundación Friedrich Ebert (3)98, 13–18. Santiago: Fundación Friedrich Ebert.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://drive.google.com/file/d/120quUM_2Mu_c18L1GcMF86hNkWfuVh5f/view?usp=drive_link" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Milet, P. V. (2002). La política exterior del gobierno de Eduardo Frei Ruiz-Tagle. In O. Muñoz & C. Stefoni (eds.), <em>El periodo del presidente Frei Ruiz-Tagle</em> (pp. 403–419). Santiago: Editorial Universitaria.</span>
