--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -481,23 +481,23 @@
       </li>
       <li class="item-row">
         <span class="file-title">Milet, P. V. (2002). La política exterior del gobierno de Eduardo Frei Ruiz-Tagle. In O. Muñoz & C. Stefoni (eds.), <em>El periodo del presidente Frei Ruiz-Tagle</em> (pp. 403–419). Santiago: Editorial Universitaria.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.iberlibro.com/primera-edicion/per%C3%ADodo-Presidente-Frei-Ru%C3%ADz-Tagle-Reflexiones-Segundo/15461757360/bd" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Moguillansky, G. (2000). <em>La inversión en Chile: ¿El fin de un ciclo de expansión?</em> Santiago: Fondo de Cultura Económica & CEPAL.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://books.google.it/books/about/La_inversi%C3%B3n_en_Chile.html?id=MKhGAAAAYAAJ&redir_esc=y" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Portales, F. (1999). <em>Chile: Una democracia tutelada</em>. Santiago: Sudamericana.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.amazon.com/s?k=9789562620956&i=stripbooks&linkCode=qs" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Velasco, A. (2000). Instituciones, credibilidad y manejo macroeconómico en Chile. <em>Estudios Públicos</em>, 77, 1–31.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.estudiospublicos.cl/index.php/cep/article/view/919" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
       <li class="item-row">
         <span class="file-title">Venegas Valdebenito, H. (2009). Trayectoria del Partido Comunista de Chile: De la crisis de la Unidad Popular a la política de rebelión popular de masas. <em>Universum</em>, 24(2), 262–293.</span>
-        <a class="tiny-link" href="#" target="_blank" rel="noopener noreferrer">GO</a>
+        <a class="tiny-link" href="https://www.scielo.cl/scielo.php?script=sci_arttext&pid=S0718-23762009000200013" target="_blank" rel="noopener noreferrer">GO</a>
       </li>
     </ul>
 
