--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -2085,77 +2085,77 @@
 
       <li class="item-row">
         <span class="file-title">1964</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Allende</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1rnFsyvaUPvd2Rfu0dGbFfHhuysicL-MI/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Montalva</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">1970</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1AnqDe4m-4tO1uNwAAkHl8j99WRSc2cpc/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1PoVsk4oVrAp8u3AE9Mb94PpaB5dZ8MGJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Allende</a>
         <a class="ref-link" href="https://drive.google.com/file/d/1AnqDe4m-4tO1uNwAAkHl8j99WRSc2cpc/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri Rodríguez</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tomic</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1wmQRvg3mt53LO0KsSE034X7pmxWt88-G/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Tomic</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">1989</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Errázuriz</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1R_VUpG_eE2D5DiJ51M_6rUz_H8jmRvlQ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Aylwin</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/18O-tgCT-MZGrfGlz7RcEnlup7OroMLwT/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Buchi</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Errázuriz</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">1993</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri Besa</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">J. Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Max-Neef</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Pizarro</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Reitze</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1ywF4_iCv6kRJid0CFXdNfF5Zz0teTEcn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1fLBlEEhTcOrjacuwYUyMM0L6J8l7ALgS/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Alessandri Besa</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">J. Piñera</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Max-Neef</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Pizarro</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Reitze</a>
       </li>
 
 
       <li class="item-row">
         <span class="file-title">1999/2000 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lagos</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Marín</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Hirsch</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Larraín</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Bolívar</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1_TrXfuOD7ns2sHDu8UXtMzl6f_vMAO_A/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lagos</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1EE_SzgQf-ADf3VOpIWq5WWOUaKLJE0zX/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/14ZV__ot1HoxYENx9yVN8VmnUJ0s1U68m/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Marín</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Hirsch</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Larraín</a>
+        <a class="ref-link" href="#" target="_blank" rel="noopener noreferrer">Frei Bolívar</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">1999/2000 2R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lagos</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1_TrXfuOD7ns2sHDu8UXtMzl6f_vMAO_A/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lagos</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1EE_SzgQf-ADf3VOpIWq5WWOUaKLJE0zX/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
     </li>
 
       <li class="item-row">
         <span class="file-title">2005/2006 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Hirsch</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/18RldUA-QrJku5fnrp5oCRSKbTBD7zN46/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/18o5xO5Lqb54lH5DUtJRZUi-lnUs-Zi76/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/11ul1gVaRWfOqktdNAUpR56oTigK8uq2e/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Lavín</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1izaUC841ic1DK6a4drbF-hvQv-vnofk7/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Hirsch</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2005/2006 2R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/18RldUA-QrJku5fnrp5oCRSKbTBD7zN46/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Bachelet</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/18o5xO5Lqb54lH5DUtJRZUi-lnUs-Zi76/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
       </li>
 
       <li class="item-row">
         <span class="file-title">2009/2010 1R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enríquez-Ominami</a>
-       <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Arrate</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/16RKFC2_8edojuy7ispe3HlTBj78gsZRE/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1cKSJrz0sePXf2exq2NAdTXPLRMyk0SIL/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1WQ_Wx8678XARBMlwCQxtotLRxo-rYhN2/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Enríquez-Ominami</a>
+       <a class="ref-link" href="https://drive.google.com/file/d/1N8kZ3W7yvrML-4weavJEqjHkCKZMnDoI/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Arrate</a>
     </li>
 
       <li class="item-row">
         <span class="file-title">2009/2010 2R</span>
-        <a class="ref-link" href="https://drive.google.com/file/d/1t6iLb_DcnfsgadnlIUPMzRFAbYuVeHH1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
-        <a class="ref-link" href="https://drive.google.com/file/d/1I514znD-V_BJqilrR0RVI-qKU3LwIngn/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/16RKFC2_8edojuy7ispe3HlTBj78gsZRE/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Piñera</a>
+        <a class="ref-link" href="https://drive.google.com/file/d/1cKSJrz0sePXf2exq2NAdTXPLRMyk0SIL/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Frei Ruiz-Tagle</a>
       </li>
 
     <li class="item-row">
